--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
 
 	<groupId>io.sapl</groupId>
 	<artifactId>sapl-extensions</artifactId>
-	<version>2.0.0-SNAPSHOT</version>
+	<version>2.0.0</version>
 
 	<packaging>pom</packaging>
 
@@ -78,6 +78,10 @@
 			<id>ossrh</id>
 			<url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
 		</snapshotRepository>
+		<repository>
+			<id>ossrh</id>
+			<url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+		</repository>		
 	</distributionManagement>
 	<profiles>
 		<profile>
