--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
 
 	<groupId>io.sapl</groupId>
 	<artifactId>sapl-extensions</artifactId>
-	<version>2.0.0</version>
+	<version>2.1.0-SNAPSHOT</version>
 
 	<packaging>pom</packaging>
 
