--- a/sapl-ethereum/pom.xml
+++ b/sapl-ethereum/pom.xml
@@ -15,7 +15,7 @@
 	<parent>
 		<groupId>io.sapl</groupId>
 		<artifactId>sapl-policy-engine</artifactId>
-		<version>2.0.0</version>
+		<version>2.1.0-SNAPSHOT</version>
 		<relativePath />
 	</parent>
 
@@ -136,7 +136,7 @@
 				</configuration>
 				<executions>
 					<execution>
-						<!-- <?m2e ignore?>  -->
+						<?m2e ignore?>
 						<id>generate-contracts</id>
 						<phase>generate-sources</phase>
 						<goals>
@@ -151,7 +151,7 @@
 				<version>1.9.1</version>
 				<executions>
 					<execution>
-		        		 <!-- <?m2e execute onConfiguration,onIncremental?>  -->
+		        		<?m2e execute onConfiguration,onIncremental?>
 						<id>add-contracts</id>
 						<phase>initialize</phase>
 						<goals>
