--- a/sapl-geo/pom.xml
+++ b/sapl-geo/pom.xml
@@ -15,7 +15,7 @@
 	<parent>
 		<groupId>io.sapl</groupId>
 		<artifactId>sapl-policy-engine</artifactId>
-		<version>2.0.0</version>
+		<version>2.1.0-SNAPSHOT</version>
 		<relativePath />
 	</parent>
 
@@ -167,7 +167,7 @@
 				<version>${asciidoc.version}</version>
 				<executions>
 					<execution>
-						<!-- <?m2e ignore?> -->
+						<?m2e ignore?>
 						<id>asciidoc-to-html</id>
 						<phase>generate-resources</phase>
 						<goals>
@@ -223,7 +223,7 @@
 				<version>3.0.0</version>
 				<executions>
 					<execution>
-						<!-- <?m2e execute onConfiguration,onIncremental?> -->
+						<?m2e execute onConfiguration,onIncremental?>
 						<id>add-test-source</id>
 						<phase>initialize</phase>
 						<goals>
