--- a/sapl-pip-http/pom.xml
+++ b/sapl-pip-http/pom.xml
@@ -15,7 +15,7 @@
 	<parent>
 		<groupId>io.sapl</groupId>
 		<artifactId>sapl-policy-engine</artifactId>
-		<version>2.0.0</version>
+		<version>2.1.0-SNAPSHOT</version>
 		<relativePath />
 	</parent>
 
@@ -37,14 +37,14 @@
 			<dependency>
 				<groupId>io.sapl</groupId>
 				<artifactId>sapl-bom</artifactId>
-				<version>2.0.0</version>
+				<version>2.1.0-SNAPSHOT</version>
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
 			<dependency>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-dependencies</artifactId>
-				<version>2.4.4</version>
+				<version>2.5.7</version>
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
