--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -49,7 +49,13 @@ jobs:
         key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
         restore-keys: |
           ${{ runner.os }}-maven-
-          
+
+    - name: Set up Web3j in case Servers for releases should be unreachable
+      run: |
+        mkdir ~/.web3j
+        mkdir ~/.web3j/solc
+        cp sapl-ethereum/src/main/solc/releases.json ~/.web3j/solc
+
     - name: Build with Maven (JUnit, JaCoCo, Sonar) 
       env:
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
