--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,7 +5,9 @@ on:
     branches: [main]
   repository_dispatch:
     branches: [main]
-  
+  pull_request:
+    branches: [main]
+
 jobs:
   build:
 
@@ -19,8 +21,9 @@ jobs:
         fetch-depth: 0
         
     - name: Set up JDK 11
-      uses: actions/setup-java@v1
+      uses: actions/setup-java@v3.1.0
       with:
+        distribution: 'temurin'
         java-version: 11
 
     - name: Configure servers
