--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,8 @@
 
 	<properties>
 		<maven.deploy.skip>true</maven.deploy.skip>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 	</properties>
 
 	<modules>
