--- a/sapl-axon/pom.xml
+++ b/sapl-axon/pom.xml
@@ -125,6 +125,11 @@
 			<artifactId>hamcrest-optional</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-configuration-processor</artifactId>
+			<optional>true</optional>
+		</dependency>
 	</dependencies>
 
 	<repositories>
