--- a/sapl-geo/pom.xml
+++ b/sapl-geo/pom.xml
@@ -11,67 +11,55 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-
 	<parent>
 		<groupId>io.sapl</groupId>
 		<artifactId>sapl-policy-engine</artifactId>
 		<version>2.1.0-SNAPSHOT</version>
 		<relativePath />
 	</parent>
-
 	<artifactId>sapl-geo</artifactId>
-
 	<name>SAPL Geo</name>
-
 	<properties>
 		<geotools.version>20.2</geotools.version>
 		<geojson-jackson.version>1.8</geojson-jackson.version>
 		<asciidoc.version>2.1.0</asciidoc.version>
 	</properties>
-
 	<dependencies>
 		<dependency>
 			<groupId>${project.groupId}</groupId>
 			<artifactId>sapl-extensions-api</artifactId>
 			<version>${project.version}</version>
 		</dependency>
-
 		<dependency>
 			<groupId>${project.groupId}</groupId>
 			<artifactId>sapl-pip-http</artifactId>
 			<version>${project.version}</version>
 		</dependency>
-
 		<dependency>
 			<groupId>org.geotools</groupId>
 			<artifactId>gt-shapefile</artifactId>
 			<version>${geotools.version}</version>
 		</dependency>
-
 		<dependency>
 			<groupId>org.geotools</groupId>
 			<artifactId>gt-swing</artifactId>
 			<version>${geotools.version}</version>
 		</dependency>
-
 		<dependency>
 			<groupId>org.geotools</groupId>
 			<artifactId>gt-epsg-hsql</artifactId>
 			<version>${geotools.version}</version>
 		</dependency>
-
 		<dependency>
 			<groupId>org.geotools</groupId>
 			<artifactId>gt-geojson</artifactId>
 			<version>${geotools.version}</version>
 		</dependency>
-
 		<dependency>
 			<groupId>org.geotools.xsd</groupId>
 			<artifactId>gt-xsd-kml</artifactId>
 			<version>${geotools.version}</version>
 		</dependency>
-
 		<dependency>
 			<groupId>net.postgis</groupId>
 			<artifactId>postgis-jdbc</artifactId>
@@ -83,13 +71,11 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<scope>provided</scope>
 		</dependency>
-
 		<dependency>
 			<groupId>${project.groupId}</groupId>
 			<artifactId>sapl-lang</artifactId>
@@ -129,10 +115,10 @@
 		<dependency>
 			<groupId>nl.jqno.equalsverifier</groupId>
 			<artifactId>equalsverifier</artifactId>
+			<version>3.14.1</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
-
 	<repositories>
 		<!-- check central first -->
 		<repository>
@@ -158,7 +144,6 @@
 			</snapshots>
 		</repository>
 	</repositories>
-
 	<build>
 		<plugins>
 			<plugin>
@@ -239,5 +224,4 @@
 			</plugin>
 		</plugins>
 	</build>
-
 </project>
