--- a/sapl-vaadin/pom.xml
+++ b/sapl-vaadin/pom.xml
@@ -13,7 +13,7 @@
 	<name>SAPL Vaadin Integration</name>
 
 	<properties>
-		<vaadin.version>23.0.1</vaadin.version>
+		<vaadin.version>24.0.2</vaadin.version>
 		<jetty.version>9.4.28.v20200408</jetty.version>
 	</properties>
 
@@ -74,14 +74,6 @@
 			<groupId>com.vaadin</groupId>
 			<artifactId>vaadin-confirm-dialog-flow</artifactId>
 			<optional>true</optional>
-		</dependency>
-
-
-		<dependency>
-			<groupId>javax.servlet</groupId>
-			<artifactId>servlet-api</artifactId>
-			<version>2.5</version>
-			<scope>provided</scope>
 		</dependency>
 
 		<dependency>
@@ -154,7 +146,7 @@
 			<version>1.0.65</version>
 		</dependency>
 		<dependency>
-			<groupId>org.hibernate</groupId>
+			<groupId>org.hibernate.orm</groupId>
 			<artifactId>hibernate-core</artifactId>
 		</dependency>		
 
