--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,6 +1,7 @@
 name: build
 
 on:
+  workflow_dispatch:
   push:
     branches: [main]
   repository_dispatch:
@@ -9,49 +10,50 @@ on:
 
 jobs:
   build:
-
-    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        java: [ '17' ]
+        os: [ubuntu-latest, windows-latest, macos-latest]
+    runs-on: ${{ matrix.os }}
  
     steps:
     - name: Check out
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
       with:
-        # avoid shallow clone to ensure correct sonarqube auto assignment
+        lfs: true
         fetch-depth: 0
         
-    - name: Set up JDK 17
-      uses: actions/setup-java@v3.1.0
+    - name: Set up JDK ${{ matrix.java }}
+      uses: actions/setup-java@v3
       with:
-        distribution: 'temurin'
-        java-version: 17
+        distribution: 'adopt'
+        java-version: ${{ matrix.java }}
+        cache: 'maven'
+
+    - name: Set up Node.js
+      uses: actions/setup-node@v3
+      with:
+        node-version: '18'
 
     - name: Configure servers
-      uses: s4u/maven-settings-action@v2.3.0
+      uses: s4u/maven-settings-action@v2.7.0
       with:
         githubServer: false
         servers: |
           [{
-              "id": "ossrh", 
+              "id": "ossrh",
               "username": "${{ secrets.OSSRH_USERNAME }}",
               "password": "${{ secrets.OSSRH_PASSWORD }}"
            },{
               "id": "ghcr.io",
-              "username": "${{ secrets.GHUB_USERNAME }}", 
+              "username": "${{ secrets.GHUB_USERNAME }}",
               "password": "${{ secrets.GHUB_ACCESS_TOKEN }}"
            },{
-              "id": "github", 
+              "id": "github",
               "username": "${{ secrets.GHUB_USERNAME }}",
               "password": "${{ secrets.GHUB_ACCESS_TOKEN }}"
            }]
     
-    - name: Cache Maven dependencies
-      uses: actions/cache@v2      
-      with:
-        path: ~/.m2/repository
-        key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
-        restore-keys: |
-          ${{ runner.os }}-maven-
-
     - name: Set up Web3j in case Servers for releases should be unreachable
       run: |
         mkdir ~/.web3j
