--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,7 +43,32 @@ jobs:
     - name: Clean up local repository before caching (Win)
       if: ${{ matrix.os == 'windows-latest'}}
       run: rm -Recurse -Force ~/.m2/repository/io/sapl
-  
+   
+   integrationTests:
+    needs: [tests]
+    name: Integration Tests
+    runs-on: ubuntu-latest
+    steps:
+    - name: Check out
+      uses: actions/checkout@v3
+      with:
+        lfs: true
+        fetch-depth: 0
+
+    - name: Set up JDK 17
+      uses: actions/setup-java@v3
+      with:
+        distribution: 'adopt'
+        java-version: 17
+        cache: 'maven'
+
+    - name: Set up Node.js
+      uses: actions/setup-node@v3
+      with:
+        node-version: '18'
+    - name: Execute integration-tests
+      run:  mvn -B package failsafe:integration-test -DskipITs=false
+          
   analyze:
     needs: [tests]
     name: Code analysis and coverage
@@ -75,17 +100,9 @@ jobs:
 
     - name: Clean up local repository before caching 
       run: rm -rf ~/.m2/repository/io/sapl
-      
-    - name: Delete workflow runs
-      uses: Mattraks/delete-workflow-runs@v2
-      with:
-        token: ${{ github.token }}
-        repository: ${{ github.repository }}
-        retain_days: 1
-        keep_minimum_runs: 6
 
   deploy:
-    needs: [analyze]
+    needs: [analyze, integrationTests]
     name: Deploy to central
     runs-on: ubuntu-latest
     steps:
@@ -140,6 +157,14 @@ jobs:
         curl -XPOST -u "${{ secrets.GHUB_USERNAME }}:${{ secrets.GHUB_ACCESS_TOKEN }}" -H "Accept: application/vnd.github.everest-preview+json" -H "Content-Type: application/json" https://api.github.com/repos/heutelbeck/sapl-server/dispatches --data '{"event_type": "build_application"}'
         curl -XPOST -u "${{ secrets.GHUB_USERNAME }}:${{ secrets.GHUB_ACCESS_TOKEN }}" -H "Accept: application/vnd.github.everest-preview+json" -H "Content-Type: application/json" https://api.github.com/repos/heutelbeck/sapl-extensions/dispatches --data '{"event_type": "build_application"}'
         curl -XPOST -u "${{ secrets.GHUB_USERNAME }}:${{ secrets.GHUB_ACCESS_TOKEN }}" -H "Accept: application/vnd.github.everest-preview+json" -H "Content-Type: application/json" https://api.github.com/repos/heutelbeck/sapl-benchmark/dispatches --data '{"event_type": "build_application"}'
-
+    
+    - name: Delete workflow runs
+      uses: Mattraks/delete-workflow-runs@v2
+      with:
+        token: ${{ github.token }}
+        repository: ${{ github.repository }}
+        retain_days: 1
+        keep_minimum_runs: 6
+        
     - name: Clean up local repository before caching 
       run: rm -rf ~/.m2/repository/io/sapl
