--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,17 +1,32 @@
+#
+# Copyright © 2017-2021 Dominic Heutelbeck (dominic@heutelbeck.com)
+#
+# Licensed under the Apache License, Version 2.0 (the "License");
+# you may not use this file except in compliance with the License.
+# You may obtain a copy of the License at
+#
+#     http://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
+#
 name: Build
 
 on:
   workflow_dispatch:
   push:
-    branches: [main]
-  
+    branches: [master, test_actions]
+
 jobs:
   tests:
     strategy:
       matrix:
         java: [ '17' ]
-        os: [ubuntu-latest, windows-latest]
-    name: JDK ${{ matrix.java }} on ${{ matrix.os }}
+        os: [ubuntu-latest, windows-latest, macos-latest]
+    name: Unit Tests (JDK ${{ matrix.java }} on ${{ matrix.os }})
     runs-on: ${{ matrix.os }}
 
     steps:
@@ -34,8 +49,8 @@ jobs:
         node-version: '18'
 
     - name: Run tests
-      run: mvn -B package javadoc:jar # package, as the maven plugin loads resources from the dependency packages
-    
+      run: mvn -B package javadoc:jar
+  
     - name: Clean up local repository before caching (Linux/Mac)
       if: ${{ matrix.os != 'windows-latest'}}
       run: rm -rf ~/.m2/repository/io/sapl
@@ -43,42 +58,17 @@ jobs:
     - name: Clean up local repository before caching (Win)
       if: ${{ matrix.os == 'windows-latest'}}
       run: rm -Recurse -Force ~/.m2/repository/io/sapl
-   
-   integrationTests:
-    needs: [tests]
-    name: Integration Tests
-    runs-on: ubuntu-latest
-    steps:
-    - name: Check out
-      uses: actions/checkout@v3
-      with:
-        lfs: true
-        fetch-depth: 0
-
-    - name: Set up JDK 17
-      uses: actions/setup-java@v3
-      with:
-        distribution: 'adopt'
-        java-version: 17
-        cache: 'maven'
-
-    - name: Set up Node.js
-      uses: actions/setup-node@v3
-      with:
-        node-version: '18'
-    - name: Execute integration-tests
-      run:  mvn -B package failsafe:integration-test -DskipITs=false
           
   analyze:
     needs: [tests]
-    name: Code analysis and coverage
+    name: Code Analysis, Test Coverage, Integration Tests
     runs-on: ubuntu-latest
     steps:
     - name: Check out
       uses: actions/checkout@v3
       with:
         lfs: true
-        # avoid shallow clone to ensure correct sonarqube auto assignment
+        # avoid shallow clone to ensure correct sonarqube auto assignment of blame
         fetch-depth: 0
 
     - name: Set up JDK 17
@@ -92,17 +82,25 @@ jobs:
       uses: actions/setup-node@v3
       with:
         node-version: '18'
-
-    - name: Run analysis (JaCoCo, Sonar)
+      
+    - name: Run analysis (Unit Tests, IT, JaCoCo, Sonar)    
       env:
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-      run: mvn -B org.jacoco:jacoco-maven-plugin:0.8.7:prepare-agent verify org.jacoco:jacoco-maven-plugin:0.8.7:report org.sonarsource.scanner.maven:sonar-maven-plugin:3.9.1.2184:sonar -Dsonar.host.url=https://sonar.ftk.de -Dsonar.login=${SONAR_TOKEN} -Dsonar.exclusions=**/xtext-gen/**/*,**/xtend-gen/**/*,**/emf-gen/**/*
+      run: mvn -B org.jacoco:jacoco-maven-plugin:0.8.7:prepare-agent verify org.jacoco:jacoco-maven-plugin:0.8.7:report org.sonarsource.scanner.maven:sonar-maven-plugin:3.9.1.2184:sonar sonar:sonar failsafe:integration-test -Pcoverage,it -DskipITs=false -Dsonar.host.url=https://sonar.ftk.de -Dsonar.login=${SONAR_TOKEN} -Dsonar.exclusions=**/xtext-gen/**/*,**/xtend-gen/**/*,**/emf-gen/**/*
+
+    - name: Delete workflow runs
+      uses: Mattraks/delete-workflow-runs@v2
+      with:
+        token: ${{ github.token }}
+        repository: ${{ github.repository }}
+        retain_days: 1
+        keep_minimum_runs: 6
 
     - name: Clean up local repository before caching 
       run: rm -rf ~/.m2/repository/io/sapl
 
   deploy:
-    needs: [analyze, integrationTests]
+    needs: [analyze]
     name: Deploy to central
     runs-on: ubuntu-latest
     steps:
@@ -157,14 +155,6 @@ jobs:
         curl -XPOST -u "${{ secrets.GHUB_USERNAME }}:${{ secrets.GHUB_ACCESS_TOKEN }}" -H "Accept: application/vnd.github.everest-preview+json" -H "Content-Type: application/json" https://api.github.com/repos/heutelbeck/sapl-server/dispatches --data '{"event_type": "build_application"}'
         curl -XPOST -u "${{ secrets.GHUB_USERNAME }}:${{ secrets.GHUB_ACCESS_TOKEN }}" -H "Accept: application/vnd.github.everest-preview+json" -H "Content-Type: application/json" https://api.github.com/repos/heutelbeck/sapl-extensions/dispatches --data '{"event_type": "build_application"}'
         curl -XPOST -u "${{ secrets.GHUB_USERNAME }}:${{ secrets.GHUB_ACCESS_TOKEN }}" -H "Accept: application/vnd.github.everest-preview+json" -H "Content-Type: application/json" https://api.github.com/repos/heutelbeck/sapl-benchmark/dispatches --data '{"event_type": "build_application"}'
-    
-    - name: Delete workflow runs
-      uses: Mattraks/delete-workflow-runs@v2
-      with:
-        token: ${{ github.token }}
-        repository: ${{ github.repository }}
-        retain_days: 1
-        keep_minimum_runs: 6
         
     - name: Clean up local repository before caching 
       run: rm -rf ~/.m2/repository/io/sapl
