--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,6 +28,7 @@ jobs:
         os: [ubuntu-latest, windows-latest, macos-latest]
     name: Unit Tests (JDK ${{ matrix.java }} on ${{ matrix.os }})
     runs-on: ${{ matrix.os }}
+    timeout-minutes: 20
 
     steps:
     - name: Check out
@@ -63,6 +64,8 @@ jobs:
     needs: [tests]
     name: Code Analysis, Test Coverage, Integration Tests
     runs-on: ubuntu-latest
+    timeout-minutes: 20
+    
     steps:
     - name: Check out
       uses: actions/checkout@v3
@@ -103,6 +106,8 @@ jobs:
     needs: [analyze]
     name: Deploy to central
     runs-on: ubuntu-latest
+    timeout-minutes: 20
+    
     steps:
     - name: Check out
       uses: actions/checkout@v3
