--- a/sapl-mqtt-pip/pom.xml
+++ b/sapl-mqtt-pip/pom.xml
@@ -31,7 +31,7 @@
 
 	<packaging>jar</packaging>
 
-	<name>SAPL-MQTT-PIP</name>
+	<name>SAPL MQTT Policy Information Point</name>
 
 	<dependencyManagement>
 		<dependencies>
