--- a/.github/workflows/axon_manual_build.yml
+++ b/.github/workflows/axon_manual_build.yml
@@ -18,8 +18,42 @@ name: Axon Manual Build
 on:
   workflow_dispatch:
 
-jobs:        
+jobs:
   tests:
+    strategy:
+      matrix:
+        java: [ '17' ]
+        os: [ubuntu-latest, windows-latest, macos-latest]
+    name: Unit Tests (JDK ${{ matrix.java }} on ${{ matrix.os }})
+    runs-on: ${{ matrix.os }}
+    timeout-minutes: 20
+
+    steps:
+    - name: Check out
+      uses: actions/checkout@v3
+      with:
+        lfs: true
+        fetch-depth: 0
+
+    - name: Set up JDK ${{ matrix.java }}
+      uses: actions/setup-java@v3
+      with:
+        distribution: 'adopt'
+        java-version: ${{ matrix.java }}
+        cache: 'maven'
+
+    - name: Run tests
+      run: mvn -B package javadoc:jar -pl sapl-axon
+  
+    - name: Clean up local repository before caching (Linux/Mac)
+      if: ${{ matrix.os != 'windows-latest'}}
+      run: rm -rf ~/.m2/repository/io/sapl
+
+    - name: Clean up local repository before caching (Win)
+      if: ${{ matrix.os == 'windows-latest'}}
+      run: rm -Recurse -Force ~/.m2/repository/io/sapl
+          
+  integration-tests:
     name: Integration Tests
     runs-on: ubuntu-latest
     timeout-minutes: 20
