--- a/pom.xml
+++ b/pom.xml
@@ -24,9 +24,14 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>io.sapl</groupId>
+	<parent>
+		<groupId>io.sapl</groupId>
+		<artifactId>sapl-policy-engine</artifactId>
+		<version>2.1.0-SNAPSHOT</version>
+		<relativePath />
+	</parent>
+	
 	<artifactId>sapl-extensions</artifactId>
-	<version>2.1.0-SNAPSHOT</version>
 
 	<packaging>pom</packaging>
 
