--- a/pom.xml
+++ b/pom.xml
@@ -78,7 +78,7 @@
 
 	<modules>
 		<module>sapl-pip-http</module>
-		<!--<module>sapl-geo</module>-->
+		<module>sapl-geo</module>
 		<module>sapl-ethereum</module>
 		<module>sapl-axon</module>
 		<module>sapl-vaadin</module>
