--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-#
+
 # Copyright © 2017-2024 Dominic Heutelbeck (dominic@heutelbeck.com)
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
@@ -13,33 +13,68 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 #
-
-# Note: when updating actions version pinning can be done using:
-# https://app.stepsecurity.io/secureworkflow before committing the changes.
-
-name: Build
+name: Testing and Deployment
 
 on:
   workflow_dispatch:
+  repository_dispatch:
+  create:
+    branches:
+      - '**'
   push:
-    branches: [main]
+    branches:
+      - '**'
+    paths-ignore:
+      - '.github/workflows/**'
+      - '!.github/workflows/build.yml'
+      - '**.md'
+  pull_request:
+    paths-ignore:
+      - '.github/workflows/**'
+      - '!.github/workflows/build.yml'
+      - '**.md'
+
+permissions:
+  contents: read
 
 jobs:
-  tests:
+  build:
     strategy:
       matrix:
-        java: [ '17' ]
+        java: [ '17']
         os: [ubuntu-latest]
-    name: Unit Tests (JDK ${{ matrix.java }} on ${{ matrix.os }})
+      fail-fast: false
+    name: Build (JDK ${{ matrix.java }} on ${{ matrix.os }})
     runs-on: ${{ matrix.os }}
-    timeout-minutes: 30
+    permissions:
+      actions: write # for Mattraks/delete-workflow-runs
+      checks: write # for scacap/action-surefire-report to publish result as PR check
+    timeout-minutes: 45
+
+    env:
+      # PRs from Dependabot are treated the same as those from forks since secrets are not accessible
+      # (see: https://github.com/dependabot/dependabot-core/issues/3253#issuecomment-852541544).
+      IS_FORK: ${{ github.event.pull_request.head.repo.fork || (github.actor == 'dependabot[bot]') }}
 
     steps:
+    - name: Harden Runner
+      uses: step-security/harden-runner@63c24ba6bd7ba022e95695ff85de572c04a18142 # v2.7.0
+      with:
+        egress-policy: audit
+
     - name: Check out
       uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
       with:
         lfs: true
         fetch-depth: 0
+
+      # This Action will scan dependency manifest files that change as part of a Pull Request,
+      # surfacing known-vulnerable versions of the packages declared or updated in the PR.
+      # Once installed, if the workflow run is marked as required,
+      # PRs introducing known-vulnerable packages will be blocked from merging.
+    - name: Dependency Review
+      if: github.event_name == 'pull_request'
+      uses: actions/dependency-review-action@4901385134134e04cec5fbe5ddfe3b2c5bd5d976 # v4.0.0
 
     - name: Set up JDK ${{ matrix.java }}
       uses: actions/setup-java@387ac29b308b003ca37ba93a6cab5eb57c8f5f93 # v4.0.0
@@ -47,102 +82,76 @@ jobs:
         distribution: 'temurin'
         java-version: ${{ matrix.java }}
         cache: 'maven'
-        
-    - name: Set up Web3j in case servers for releases should be unreachable
+
+    - name: Setup Maven
+      uses: stCarolas/setup-maven@d6af6abeda15e98926a57b5aa970a96bb37f97d1 # v5
+      with:
+        maven-version: 3.9.6
+
+    - name: Set up Node.js
+      uses: actions/setup-node@60edb5dd545a775178f52524783378180af0d1f8 # v4.0.2
+      with:
+        node-version: '20'
+
+      # Set up Web3j in case servers for releases should be unreachable.
+    - name: Set up Web3j
       run: |
         mkdir ~/.web3j
         mkdir ~/.web3j/solc
         cp sapl-demo-ethereum/src/main/solc/releases.json ~/.web3j/solc
 
-    - name: Run tests
-      run: mvn -B package
+    - name: Run Unit Tests, Integration Tests, JaCoCo, SpotBugs
+      # Javadoc: skipped in demos
+      # Unit and integration tests: skipped in sapl-demo-mqtt-pep, sapl-hivemq-extension
+      run: mvn -B verify -fae javadoc:jar spotbugs:spotbugs -Pcoverage,it,spotbugs
 
-    - name: Javadoc on Libraries, Ignoring Demos
-      run: mvn -B package javadoc:jar -DskipTests -pl !sapl-demo-vaadin,!sapl-demo-ethereum,!sapl-demo-axon,!sapl-demo-mqtt-pep
-  
-    - name: Clean up local repository before caching (Linux/Mac)
-      if: ${{ matrix.os != 'windows-latest'}}
-      run: rm -rf ~/.m2/repository/io/sapl
-
-    - name: Clean up local repository before caching (Win)
-      if: ${{ matrix.os == 'windows-latest'}}
-      run: rm -Recurse -Force ~/.m2/repository/io/sapl
-          
-  analyze:
-    needs: [tests]
-    name: Code Analysis, Test Coverage, Integration Tests
-    runs-on: ubuntu-latest
-    timeout-minutes: 35
-    
-    steps:
-    - name: Check out
-      uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
+    - name: Cache Sonar Packages
+      if: env.IS_FORK == 'false'
+      uses: actions/cache@13aacd865c20de90d75de3b17ebe84f7a17d57d2 # v4.0.0
       with:
-        lfs: true
-        # avoid shallow clone to ensure correct sonarqube auto assignment of blame
-        fetch-depth: 0
+        path: ~/.sonar/cache
+        key: ${{ runner.os }}-sonar
+        restore-keys: ${{ runner.os }}-sonar
 
-    - name: Set up JDK 17
-      uses: actions/setup-java@387ac29b308b003ca37ba93a6cab5eb57c8f5f93 # v4.0.0
+    - name: Run SonarCloud Analysis
+      if: env.IS_FORK == 'false'
+      env:
+        SONAR_TOKEN: ${{ secrets.SONARCLOUD_TOKEN }}
+      run: >
+        mvn -B org.sonarsource.scanner.maven:sonar-maven-plugin:3.9.1.2184:sonar
+        -Dsonar.organization=heutelbeck
+        -Dsonar.host.url=https://sonarcloud.io
+        -Dsonar.projectKey=heutelbeck_sapl-extensions
+        -Dsonar.java.spotbugs.reportPaths=target/spotbugsXml.xml
+        -Dsonar.qualitygate.wait=true
+
+    - name: Save PR Number # needed for subsequent SonarCloud workflow for PRs from fork
+      if: env.IS_FORK == 'true'
+      run: echo "${{ github.event.number }}" > pr_data.txt
+
+    - name: Upload Artifact # needed for subsequent SonarCloud workflow for PRs from fork
+      if: env.IS_FORK == 'true'
+      uses: actions/upload-artifact@26f96dfa697d77e81fd5907df203aa23a56210a8 # v4.3.0
       with:
-        distribution: temurin
-        java-version: 17
-        cache: 'maven'
+        name: pr_build
+        path: |
+          **/src
+          **/target/spotbugsXml.xml
+          **/target/classes
+          **/target/test-classes
+          **/target/site/jacoco/jacoco.xml
+          **/pom.xml
+          pom.xml
+          pr_data.txt
+          .git
+        retention-days: 1
 
-    - name: Set up Web3j in case servers for releases should be unreachable
-      run: |
-        mkdir ~/.web3j
-        mkdir ~/.web3j/solc
-        cp sapl-demo-ethereum/src/main/solc/releases.json ~/.web3j/solc
-      
-#    - name: Run analysis (Unit Tests, IT, JaCoCo, Sonar)    
-#      env:
-#        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-#      run: mvn -B clean verify sonar:sonar failsafe:integration-test -Pcoverage,it  -Dsonar.login=${SONAR_TOKEN}
+    - name: Publish Test Report
+      if: ${{ (success() || failure()) && (env.IS_FORK == 'false') }}
+      uses: scacap/action-surefire-report@a2911bd1a4412ec18dde2d93b1758b3e56d2a880 # v1.8.0
 
-    - name: Delete workflow runs
-      uses: Mattraks/delete-workflow-runs@99626ea7e2020a8ab987073a1e127e2597102694 # v2
-      with:
-        token: ${{ github.token }}
-        repository: ${{ github.repository }}
-        retain_days: 1
-        keep_minimum_runs: 6
-
-    - name: Clean up local repository before caching (Linux/Mac)
-      if: ${{ matrix.os != 'windows-latest'}}
-      run: rm -rf ~/.m2/repository/io/sapl
-
-    - name: Clean up local repository before caching (Win)
-      if: ${{ matrix.os == 'windows-latest'}}
-      run: rm -Recurse -Force ~/.m2/repository/io/sapl
-
-  deploy:
-    needs: [analyze]
-    name: Deploy to central
-    runs-on: ubuntu-latest
-    timeout-minutes: 35
-    
-    steps:
-    - name: Check out
-      uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
-      with:
-        lfs: true
-        fetch-depth: 0
-
-    - name: Set up JDK 17
-      uses: actions/setup-java@387ac29b308b003ca37ba93a6cab5eb57c8f5f93 # v4.0.0
-      with:
-        distribution: temurin
-        java-version: 17
-        cache: 'maven'
-
-    - name: Set up Web3j in case servers for releases should be unreachable
-      run: |
-        mkdir ~/.web3j
-        mkdir ~/.web3j/solc
-        cp sapl-demo-ethereum/src/main/solc/releases.json ~/.web3j/solc
-
-    - name: Configure servers
+    - name: Configure Servers
+      if: github.ref == 'refs/heads/main'
       uses: s4u/maven-settings-action@7802f6aec16c9098b4798ad1f1d8ac75198194bd # v3.0.0
       with:
         githubServer: false
@@ -162,19 +171,23 @@ jobs:
            }]
 
     - name: Install GPG Code Signing Key
+      if: github.ref == 'refs/heads/main'
       run: |
         cat <(echo -e "${{ secrets.OSSRH_GPG_SECRET_KEY }}") | gpg --batch --import
         gpg --list-secret-keys --keyid-format LONG
 
-    - name: Deploy Maven artefacts
-      run: mvn -B --no-transfer-progress -Dgpg.passphrase=${{ secrets.OSSRH_GPG_SECRET_KEY_PASSWORD }} -Ppublish -DskipTests clean package deploy  -pl !sapl-demo-vaadin,!sapl-demo-ethereum,!sapl-demo-axon,!sapl-demo-mqtt-pep
+    - name: Deploy Maven Artifacts
+      if: github.ref == 'refs/heads/main'
+      run: mvn -B --no-transfer-progress -Dgpg.passphrase=${{ secrets.OSSRH_GPG_SECRET_KEY_PASSWORD }} -pl !sapl-demo-vaadin,!sapl-demo-ethereum,!sapl-demo-axon,!sapl-demo-mqtt-pep -Ppublish -DskipTests clean package deploy
 
-    - name: Trigger CI build of downstream repositories
-      run: |
-        curl -XPOST -u "${{ secrets.GHUB_USERNAME }}:${{ secrets.GHUB_ACCESS_TOKEN }}" -H "Accept: application/vnd.github.everest-preview+json" -H "Content-Type: application/json" https://api.github.com/repos/heutelbeck/sapl-demos/dispatches --data '{"event_type": "build_application"}'
-        curl -XPOST -u "${{ secrets.GHUB_USERNAME }}:${{ secrets.GHUB_ACCESS_TOKEN }}" -H "Accept: application/vnd.github.everest-preview+json" -H "Content-Type: application/json" https://api.github.com/repos/heutelbeck/sapl-server/dispatches --data '{"event_type": "build_application"}'
-        curl -XPOST -u "${{ secrets.GHUB_USERNAME }}:${{ secrets.GHUB_ACCESS_TOKEN }}" -H "Accept: application/vnd.github.everest-preview+json" -H "Content-Type: application/json" https://api.github.com/repos/heutelbeck/sapl-extensions/dispatches --data '{"event_type": "build_application"}'
-        curl -XPOST -u "${{ secrets.GHUB_USERNAME }}:${{ secrets.GHUB_ACCESS_TOKEN }}" -H "Accept: application/vnd.github.everest-preview+json" -H "Content-Type: application/json" https://api.github.com/repos/heutelbeck/sapl-benchmark/dispatches --data '{"event_type": "build_application"}'
-        
-    - name: Clean up local repository before caching 
+    - name: Delete Workflow Runs
+      if: github.ref == 'refs/heads/main'
+      uses: Mattraks/delete-workflow-runs@39f0bbed25d76b34de5594dceab824811479e5de # v2.0.6
+      with:
+        token: ${{ github.token }}
+        repository: ${{ github.repository }}
+        retain_days: 1
+        keep_minimum_runs: 6
+
+    - name: Clean up Local Repository before Caching
       run: rm -rf ~/.m2/repository/io/sapl
