--- a/sapl-demo-ethereum/src/main/resources/application.properties
+++ b/sapl-demo-ethereum/src/main/resources/application.properties
@@ -9,3 +9,4 @@ vaadin.launch-browser=true
 vaadin.whitelisted-packages = com.vaadin,org.vaadin,dev.hilla,io.sapl.ethereum.demo
 spring.jpa.defer-datasource-initialization = true
 spring.sql.init.mode = always
+vaadin.launch-browser=false
